# dms-awww-integration

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  README.md  TESTING.md  install.sh  test.sh  uninstall.sh
benches/: comparison.rs  config_bench.rs  dms_bench.rs
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs
src/dms/: mod.rs
src/executor/: mod.rs
src/niri/: mod.rs
src/watcher/: mod.rs
systemd/: dms-awww.service  dms-wallpaper-watcher.service
tests/: config_tests.rs  dms_tests.rs  e2e_tests.rs  executor_tests.rs  niri_tests.rs
tests/common/: mod.rs
