[package]
name = "dms-awww"
version = "2.0.0"
edition = "2021"
description = "Efficient wallpaper management for DMS using awww"
authors = ["higorprado"]
license = "MIT"
repository = "https://github.com/higorprado/dms-awww-integration"
readme = "README.md"
keywords = ["wallpaper", "dms", "hyprland", "niri", "awww"]
categories = ["command-line-utilities"]

[[bin]]
name = "dms-awww"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
shellexpand = "3.1"
which = "7.0"

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
criterion = "0.5"
mockall = "0.13"
tokio-test = "0.4"
serial_test = "3.2"
once_cell = "1.19"

[[bench]]
name = "config_bench"
harness = false

[[bench]]
name = "dms_bench"
harness = false

[[bench]]
name = "comparison"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
